# sendcli

./: Cargo.toml  README.md
src/: handle_args.rs  handle_path_type.rs  main.rs  tests.rs
