[package]
name = "sendcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
reqwest={version="0.11", features=["blocking", "json"]}

